--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,7 @@
             "allowedCommonJsDependencies": [
               "file-saver"
             ],
-            "outputPath": "docs/hyperledgerfabricwizard",
+            "outputPath": "docs/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
